# librustzcash

./: Cargo.toml
librustzcash/: Cargo.toml
librustzcash/include/: librustzcash.h  librustzcash_masp.h
librustzcash/src/: rustzcash.rs
librustzcash/src/tests/: key_components.rs  mod.rs  notes.rs
masp_primitives/: Cargo.toml
masp_primitives/src/: keys.rs  redjubjub.rs  zip32.rs
masp_proofs/: Cargo.toml
masp_proofs/src/: constants.rs  lib.rs  prover.rs
masp_proofs/src/circuit/: pedersen_hash.rs  sapling.rs
masp_proofs/src/sapling/: prover.rs  verifier.rs
zcash_client_backend/src/: decrypt.rs
zcash_client_sqlite/src/: transact.rs
zcash_primitives/src/: consensus.rs  constants.rs  group_hash.rs  keys.rs  lib.rs  note_encryption.rs  primitives.rs  prover.rs
zcash_primitives/src/jubjub/: mod.rs
zcash_primitives/src/transaction/: builder.rs  components.rs  sighash.rs
zcash_proofs/: Cargo.toml
zcash_proofs/examples/: bench.rs  gen_uda_params.rs
zcash_proofs/src/: constants.rs  lib.rs  prover.rs
zcash_proofs/src/circuit/: pedersen_hash.rs  sapling.rs
zcash_proofs/src/sapling/: mod.rs  prover.rs  verifier.rs
