[workspace]
members = [
    "components/equihash",
    "zcash_client_backend",
    "zcash_client_sqlite",
    "zcash_extensions",
    "zcash_history",
    "zcash_primitives",
    "zcash_proofs",
    "masp_primitives",
    "masp_proofs"
]

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
